--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
       <strong>We're sorry but duo-lingual-youtube doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
+    <script src="js/youtubejs.js"></script>
     <!-- built files will be auto injected -->
   </body>
 </html>
