--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
     </noscript>
     <div id="app"></div>
     <script src="js/youtubejs.js"></script>
+    <script src="js/cookie.js"></script>
     <!-- built files will be auto injected -->
   </body>
 </html>
